# CardBoard64_2

./: .gitignore  CMakeLists.txt  README.md
pcb/: cardboard64.kicad_pcb  cardboard64.kicad_prl  cardboard64.kicad_pro  cardboard64.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
src/: bus.pio  bus.pio.h  cart.cpp  cart.h  cartbuspio.hpp  config.h  header.py  main.cpp  n64.txt  n64txt.hpp  test.py  usb_descriptors.c  usbdisk.cpp  usbdisk.h  virtfat16.cpp  virtfat16.h
